chores: fix prettier conf and add tailwind prettier plugin

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,12 +26,12 @@ body {
     text-wrap: balance;
   }
   .default-h3 {
-    @apply font-medium text-base;
+    @apply text-base font-medium;
   }
   .default-subtitle {
-    @apply font-extralight text-base;
+    @apply text-base font-extralight;
   }
   .default-description {
-    @apply font-extralight text-sm;
+    @apply text-sm font-extralight;
   }
 }
